2002-06-14  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dao.c (dao_format_output) : don't just bail out when clear_outputrange
	is false

2002-05-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.4

2002-05-11  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/tools/auto-correct.c (autocorrect_shutdown) : change
	  gnm_gconf_rm_notification_autocorrect to gnm_gconf_rm_notification

2002-05-03  Morten Welinder  <terra@diku.dk>

	* goal-seek.c (fake_df): More debug.  Handle things that come out
	NaN.
	(goal_seek_newton): Better xstep calculation for the
	fake_df case.

2002-04-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.3

2002-04-23  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/tools/dao.[ch] (dao_get_colrow_state_list) : new
	(dao_set_colrow_state_list) : new

2002-04-15  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* auto-correct.[ch] : switch from gnome-config to gconf and make
	  preserve autocorrect exceptions. Make exception lists into 
	  GSList

2002-04-13  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* dao.c (dao_command_descriptor) : use cmd_range_to_str_utility

2002-04-05  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* random-generator.[ch] : make undoable

2002-03-31  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* analysis-tools.c : adjust includes
	* random-generator.c : ditto

2002-03-31  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* Makefile.am : added tools.h
	* analysis-tools.c : use inheritance over #define
	* analysis-tools.h : use inheritance over #define
	* dao.h : delete labels_flag from dao (it's not an output option)
	* random-generator.c :  use inheritance over #define
	* tools.h : new

2002-03-31  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* analysis-tools.[hc] : make regrssion tool undoable

2002-03-31  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* analysis-tools.c : make histogram undoable
	* analysis-tools.h : include the analysis-tools.c specific
	  header info (rather than putting that into tools.h)