@@ -9,7 +9,9 @@
 
 typedef enum {
   DiscreteDistribution, UniformDistribution, NormalDistribution,
-  BernoulliDistribution, BinomialDistribution, PoissonDistribution,
+  BernoulliDistribution, BetaDistribution, BinomialDistribution,
+  PoissonDistribution, CauchyDistribution, ChisqDistribution,
+  WeibullDistribution, FdistDistribution,
   /* PatternedDistribution, */ NegativeBinomialDistribution, ExponentialDistribution
 } random_distribution_t;
 
@@ -32,6 +34,11 @@ typedef struct {
 } bernoulli_random_tool_t;
 
 typedef struct {
+        gnum_float a;
+        gnum_float b;
+} beta_random_tool_t;
+
+typedef struct {
         gnum_float p;
         int     trials;
 } binomial_random_tool_t;
@@ -49,6 +56,24 @@ typedef struct {
         gnum_float b;
 } exponential_random_tool_t;
 
+typedef struct {
+        gnum_float a;
+} cauchy_random_tool_t;
+
+typedef struct {
+        gnum_float nu;
+} chisq_random_tool_t;
+
+typedef struct {
+        gnum_float nu1;
+        gnum_float nu2;
+} fdist_random_tool_t;
+
+typedef struct {
+        gnum_float a;
+        gnum_float b;
+} weibull_random_tool_t;
+
 /* typedef struct { */
 /*         gnum_float from, to; */
 /*         gnum_float step; */
@@ -61,10 +86,15 @@ typedef union {
         uniform_random_tool_t     uniform;
         normal_random_tool_t      normal;
         bernoulli_random_tool_t   bernoulli;
+        beta_random_tool_t        beta;
         binomial_random_tool_t    binomial;
         negbinom_random_tool_t    negbinom;
         poisson_random_tool_t     poisson;
         exponential_random_tool_t exponential;
+        cauchy_random_tool_t      cauchy;
+        chisq_random_tool_t       chisq;
+        fdist_random_tool_t       fdist;
+        weibull_random_tool_t     weibull;
 /*         patterned_random_tool_t   patterned; */
 } random_tool_t;
 
